Revert "Fixing LESS global layout overflow on mobile (2)"
This reverts commit 1636bd237be3d93aafcb65f3a344af6839de0f61.

--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -56,7 +56,7 @@
     .places__gallery {
         display: block;
         position: absolute;
-        height: calc(100% - 52px);
+        height: calc(100vh - 52px);
         transform: translateX(@sidebar-width-mobile-minus);
         transition: all 150ms ease-out;
         width: @sidebar-width-mobile;
